@@ -229,6 +229,10 @@ public class GwtGraphics extends AbstractGraphics {
 		return $wnd.screen.height;
 	}-*/;
 
+	private native int getColorDepthJSNI () /*-{
+		return $wnd.screen.colorDepth;
+	}-*/;
+
 	private native boolean isFullscreenJSNI () /*-{
 		// Standards compliant check for fullscreen
 		if ("fullscreenElement" in $doc) {
@@ -339,7 +343,8 @@ public class GwtGraphics extends AbstractGraphics {
 	@Override
 	public DisplayMode getDisplayMode () {
 		double density = config.usePhysicalPixels ? getNativeScreenDensity() : 1;
-		return new DisplayMode((int)(getScreenWidthJSNI() * density), (int)(getScreenHeightJSNI() * density), 60, 8) {};
+		return new DisplayMode((int)(getScreenWidthJSNI() * density), (int)(getScreenHeightJSNI() * density), 60,
+			getColorDepthJSNI()) {};
 	}
 
 	@Override
